<resources>
    <string name="app_name">SecurePro</string>

    <string name="device_id">Device Id : </string>
    <string name="placeholder_device_id">Device Id</string>

    <string name="device_name">Device Name :</string>
    <string name="placeholder_device_name">Device Name</string>

    <string name="device_type">Device Type :</string>
    <string name="placeholder_device_type">Device Type</string>

    <string name="password">Password : </string>
    <string name="placeholder_password">Password</string>

    <string name="password_check">Re-enter Password : </string>
    <string name="placeholder_renter_pswd">Password</string>
    <string name="submit">Submit</string>
    <string name="enter_password">Enter Password</string>
    <string name="device_icon">Device Icon</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="get_help">Get Help?</string>
    <string name="profile_image">Profile Image</string>
    <string name="placeholder">Placeholder</string>
    <string name="device_list">Device List</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>