<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile_menu_item"
        android:icon="@drawable/ic_user_profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/edit_profile_menu_item"
        android:icon="@drawable/ic_edit_profile"
        android:title="@string/edit_profile" />

    <item
        android:id="@+id/device_list_menu_item"
        android:icon="@drawable/ic_shield"
        android:title="@string/device_list" />

    <item
        android:id="@+id/get_help_menu_item"
        android:icon="@drawable/ic_get_help"
        android:title="@string/get_help" />

    <item
        android:id="@+id/logout_menu_item"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
    <!-- Add more items as needed -->
</menu>