<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <EditText
        android:layout_gravity="center"
        android:id="@+id/usernameInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/username"
        />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/placeholder_password"
        android:scrollbarSize="25dp"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_gravity="center"
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_gravity="center"
        android:id="@+id/loginBtn"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/submit"/>
</LinearLayout>